# send_to_anki_for_markdown

./: Cargo.toml  README.md  test.md
src/: anki.rs  main.rs  parser.rs  render.rs
