[package]
name = "anki-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
regex = "1.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
syntect = "5.1"
lazy_static = "1.4"
encoding_rs = "0.8"
